<resources>
    <string name="app_name">Budayaku</string>
    <string name="mulai_pencarian_budaya">Mulai pencarian budaya</string>
    <string name="upload">Unggah gambar</string>
    <string name="unggah">Unggah</string>
    <string name="senjata_adat">Senjata Adat</string>
    <string name="pakaian_adat">Pakaian Adat</string>
    <string name="rumah_adat">Rumah Adat</string>
    <string name="budayaku">Budayaku</string>
    <string name="image_detail">image detail</string>
    <string name="nama_adat">Nama Adat</string>
    <string name="description">description</string>
    <string name="makanan_khas">Makanan Khas</string>
    <string name="about">About</string>
    <string name="pencarian_makanan_khas">Pencarian Makanan Khas</string>
    <string name="about_budayaku">Budaya Indonesia terancam punah akibat globalisasi, untuk mengatasi masalah krisis budaya, Kami membuat aplikasi yang menerapkan 3 teknologi berbasis Tensorflow, Android dan Cloud secara sistematis sehingga aplikasi yang kami buat dapat membantu mengedukasi tentang budaya di Indonesia</string>

    <string name="belah_bubung">Rumah Belah Bubung adalah rumah adat dari kepulauan Riau yang berada di Indonesia. Rumah Belah Bubung juga dikenal dengan nama rumah rabung atau rumah bubung melayu. Konon, nama rumah ini diberikan oleh orang-orang asing yang datang ke Indonesia seperti Tiongkok dan Belanda</string>
    <string name="Baileo">Baileo adalah rumah adat Maluku dan Maluku Utara, Indonesia. Baileo merupakan representasi kebudayaan Maluku dan memiliki fungsi yang sangat penting bagi kehidupan masyarakat. Baileo adalah identitas setiap negeri di Maluku selain Masjid atau Gereja</string>
    <string name="Baloy_Mayo">Rumah adat Baloy Mayo  merupakan hasil kebudayaan seni arsitektur dari masyarakat suku Tidung, Kalimantan Utara. Seperti suku lainnya, suku Tidung ini mempunyai kebudayaan dan model rumah adat sendiri. Walaupun rumah adat ini masih menggunakan sejumlah tiang tinggi pada bagian bawahnya, bentuk bangunan rumah adat ini terlihat lebih modern dan modis</string>
    <string name="Bubungan_Lima">Rumah Bubungan Lima adalah rumah adat dari provinsi Bengkulu. Rumah ini memiliki model seperti rumah panggung yang ditopang oleh beberapa tiang penopang. Rumah ini bukanlah rumah tinggal seperti pada umumnya. Rumah ini biasanya dipakai untuk acara adat masyarakat Bengkulu</string>
    <string name="Dulohupa">Dulohupa adalah rumah adat atau rumah tradisional Indonesia yang berasal dari Kelurahan Limba, Kecamatan Kota Selatan, Kota Gorontalo, Provinsi Gorontalo. Penduduk Gorontalo menyebut Dulohupa dengan nama Yiladia Dulohupa Lo Ulipu Hulondhalo</string>
    <string name="Gapura_Candi_Bentar">Candi bentar adalah sebutan bagi bangunan gapura berbentuk dua bangunan serupa dan sebangun tetapi merupakan simetri cermin yang membatasi sisi kiri dan kanan pintu masuk</string>
    <string name="Honai">Honai adalah rumah Adat Papua pada khususnya di Bagian Penggunungan. Papua terkenal dengan budayanya yang beranekaragam dan bahkan sebagaian dari masyarakatnya masih memegang kuat kebudayaannya</string>
    <string name="Istana_Kesultanan_Kadariyah"> Keraton Kadariah adalah istana Kesultanan Pontianak yang dibangun pada dari tahun 1771 sampai 1778 masehi. Sayyid Syarif Abdurrahman Al-qadrie adalah sultan pertama yang mendiami istana tersebut. Keraton ini berada di dekat pusat Kota Pontianak, Kalimantan Barat </string>
    <string name="Jabu_Bolon">Siwaluh Jabu adalah rumah adat suku Karo. Siwaluh jabu adalah rumah tinggal orang-orang Karo pada zaman dahulu. Siwaluh jabu menjadi bagian dari kehidupan orang Karo</string>
    <string name="Joglo">Joglo adalah rumah tradisional masyarakat Jawa atau daerah lain di Indonesia yang terdiri atas 4 tiang utama. Rumah tradisional Jawa terbagi menjadi dua bagian, yakni rumah induk dan rumah tambahan. Rumah induk terdiri dari beberapa bagian sebagai berikut: Pendapa/Pendopo. Bagian ini terletak di depan rumah</string>
    <string name="Keraton_Kesepuhan_Cirebon">Keraton Kasepuhan adalah keraton yang terletak di kelurahan Kesepuhan, Lemahwungkuk, Cirebon. Makna di setiap sudut arsitektur keraton ini pun terkenal paling bersejarah. Halaman depan keraton ini dikelilingi tembok bata merah dan terdapat pendopo di dalamnya</string>
    <string name="Loka_Samawa">Rumah Adat Dalam Loka adalah kediaman raja-raja yang berasal dari Kabupaten Sumbawa, Nusa Tenggara Barat. Rumah dalam Loka atau istana Sumbawa ini merupakan peninggalan sejarah dari kerajaan Sumbawa. Istana Dalam Loka dibangun pada tahun 1885 oleh Sultan Muhammad Jalalludin III</string>
    <string name="Mod_Aki_Aksa">Rumah Kaki Seribu adalah rumah adat asli dari penduduk Suku Arfak yang menetap di Kabupaten Manokwari, Papua Barat. Rumah adat tersebut dijuluki demikian karena menggunakan banyak tiang penyangga di bawahnya, sehingga jika dilihat memiliki banyak kaki seperti hewan kaki seribu</string>

</resources>